// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkItemsHierarchy App when licensePlan is free matches the snapshot 1`] = `
<div>
  <div
    class="gl-card gl-px-8 gl-py-6 gl-line-height-20 gl-mt-4 gl-px-5!"
  >
    <!---->
     
    <div
      class="gl-card-body gl-display-flex gl-p-0!"
    >
      <div
        class="gl-banner-illustration"
      >
        <img
          alt=""
          role="presentation"
          src="/foo.svg"
        />
      </div>
       
      <div
        class="gl-banner-content"
      >
        <h1
          class="gl-banner-title"
        >
          Help us improve work items in GitLab!
        </h1>
         
        <p>
          
      Is there a framework or type of work item you wish you had access to in GitLab? Give us your feedback and help us build the experiences valuable to you.
    
        </p>
         
        <a
          class="btn btn-confirm btn-md gl-button"
          data-testid="gl-banner-primary-button"
          href="https://forms.gle/u1BmRp8rTbwj52iq5"
        >
          <!---->
           
          <!---->
            
          <span
            class="gl-button-text"
          >
            Take the work items survey
          </span>
        </a>
         
      </div>
       
      <button
        aria-label="Close banner"
        class="btn gl-banner-close btn-default btn-sm gl-button btn-default-tertiary btn-icon"
        type="button"
      >
        <!---->
         
        <svg
          aria-hidden="true"
          class="gl-button-icon gl-icon s16"
          data-testid="close-icon"
          role="img"
        >
          <use
            href="#close"
          />
        </svg>
          
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <h3
    class="gl-mt-5!"
  >
    Planning hierarchy
  </h3>
   
  <p>
    
    Deliver value more efficiently by breaking down necessary work into a hierarchical structure. This structure helps teams understand scope, priorities, and how work cascades up toward larger goals.
  
  </p>
   
  <div
    class="gl-font-weight-bold gl-mb-2"
  >
    Current structure
  </div>
   
  <p
    class="gl-mb-3!"
  >
    You can start using these items now.
  </p>
   
  <div>
    <div
      class="gl-mb-3"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(203, 226, 249); color: rgb(16, 104, 191);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s12"
            data-testid="issues-icon"
            role="img"
          >
            <use
              href="#issues"
            />
          </svg>
        </span>
        

      Issue
    
      </span>
       
      <!---->
       
      <!---->
    </div>
    <div
      class="gl-mb-3"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(195, 230, 205); color: rgb(33, 118, 69);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s12"
            data-testid="task-done-icon"
            role="img"
          >
            <use
              href="#task-done"
            />
          </svg>
        </span>
        

      Task
    
      </span>
       
      <!---->
       
      <!---->
    </div>
    <div
      class="gl-mb-3"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(219, 42, 15); color: rgb(253, 212, 205);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s16"
            data-testid="issue-type-incident-icon"
            role="img"
          >
            <use
              href="#issue-type-incident"
            />
          </svg>
        </span>
        

      Incident
    
      </span>
       
      <!---->
       
      <!---->
    </div>
  </div>
   
  <div
    class="gl-font-weight-bold gl-mt-5 gl-mb-2"
    data-testid="unavailable-structure"
  >
    
    Unavailable structure
  
  </div>
   
  <p
    class="gl-mb-3!"
  >
    
    These items are unavailable in the current structure.
  
  </p>
   
  <div>
    <div
      class="gl-mb-3 flex"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(225, 216, 249); color: rgb(105, 76, 192);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s12"
            data-testid="epic-icon"
            role="img"
          >
            <use
              href="#epic"
            />
          </svg>
        </span>
        

      Epic
    
      </span>
       
      <span
        class="badge gl-ml-3 gl-align-self-center badge-info badge-pill gl-badge sm"
      >
        <svg
          aria-hidden="true"
          class="gl-badge-icon gl-icon s16 gl-mr-2"
          data-testid="license-icon"
          role="img"
        >
          <use
            href="#license"
          />
        </svg>
         Premium
      </span>
       
      <!---->
    </div>
    <div
      class="gl-mb-3 flex"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(245, 217, 168); color: rgb(171, 97, 0);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s12"
            data-testid="epic-icon"
            role="img"
          >
            <use
              href="#epic"
            />
          </svg>
        </span>
        

      Child epic
    
      </span>
       
      <span
        class="badge gl-ml-3 gl-align-self-center badge-info badge-pill gl-badge sm"
      >
        <svg
          aria-hidden="true"
          class="gl-badge-icon gl-icon s16 gl-mr-2"
          data-testid="license-icon"
          role="img"
        >
          <use
            href="#license"
          />
        </svg>
         Ultimate
      </span>
       
      <!---->
    </div>
    <div
      class="gl-mb-3 flex"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(197, 227, 251); color: rgb(0, 104, 197);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s12"
            data-testid="requirements-icon"
            role="img"
          >
            <use
              href="#requirements"
            />
          </svg>
        </span>
        

      Requirement
    
      </span>
       
      <span
        class="badge gl-ml-3 gl-align-self-center badge-info badge-pill gl-badge sm"
      >
        <svg
          aria-hidden="true"
          class="gl-badge-icon gl-icon s16 gl-mr-2"
          data-testid="license-icon"
          role="img"
        >
          <use
            href="#license"
          />
        </svg>
         Ultimate
      </span>
       
      <!---->
    </div>
    <div
      class="gl-mb-3 flex"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(0, 122, 63); color: rgb(186, 232, 203);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s16"
            data-testid="issue-type-test-case-icon"
            role="img"
          >
            <use
              href="#issue-type-test-case"
            />
          </svg>
        </span>
        

      Test case
    
      </span>
       
      <span
        class="badge gl-ml-3 gl-align-self-center badge-info badge-pill gl-badge sm"
      >
        <svg
          aria-hidden="true"
          class="gl-badge-icon gl-icon s16 gl-mr-2"
          data-testid="license-icon"
          role="img"
        >
          <use
            href="#license"
          />
        </svg>
         Ultimate
      </span>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`WorkItemsHierarchy App when licensePlan is premium matches the snapshot 1`] = `
<div>
  <div
    class="gl-card gl-px-8 gl-py-6 gl-line-height-20 gl-mt-4 gl-px-5!"
  >
    <!---->
     
    <div
      class="gl-card-body gl-display-flex gl-p-0!"
    >
      <div
        class="gl-banner-illustration"
      >
        <img
          alt=""
          role="presentation"
          src="/foo.svg"
        />
      </div>
       
      <div
        class="gl-banner-content"
      >
        <h1
          class="gl-banner-title"
        >
          Help us improve work items in GitLab!
        </h1>
         
        <p>
          
      Is there a framework or type of work item you wish you had access to in GitLab? Give us your feedback and help us build the experiences valuable to you.
    
        </p>
         
        <a
          class="btn btn-confirm btn-md gl-button"
          data-testid="gl-banner-primary-button"
          href="https://forms.gle/u1BmRp8rTbwj52iq5"
        >
          <!---->
           
          <!---->
            
          <span
            class="gl-button-text"
          >
            Take the work items survey
          </span>
        </a>
         
      </div>
       
      <button
        aria-label="Close banner"
        class="btn gl-banner-close btn-default btn-sm gl-button btn-default-tertiary btn-icon"
        type="button"
      >
        <!---->
         
        <svg
          aria-hidden="true"
          class="gl-button-icon gl-icon s16"
          data-testid="close-icon"
          role="img"
        >
          <use
            href="#close"
          />
        </svg>
          
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <h3
    class="gl-mt-5!"
  >
    Planning hierarchy
  </h3>
   
  <p>
    
    Deliver value more efficiently by breaking down necessary work into a hierarchical structure. This structure helps teams understand scope, priorities, and how work cascades up toward larger goals.
  
  </p>
   
  <div
    class="gl-font-weight-bold gl-mb-2"
  >
    Current structure
  </div>
   
  <p
    class="gl-mb-3!"
  >
    You can start using these items now.
  </p>
   
  <div>
    <div
      class="gl-mb-3"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(225, 216, 249); color: rgb(105, 76, 192);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s12"
            data-testid="epic-icon"
            role="img"
          >
            <use
              href="#epic"
            />
          </svg>
        </span>
        

      Epic
    
      </span>
       
      <!---->
       
      <div
        class=""
      >
        <!---->
         
        <div
          class="gl-display-block gl-mt-2 gl-ml-6"
        >
          <svg
            aria-hidden="true"
            class="gl-text-gray-400 gl-icon s16"
            data-testid="arrow-down-icon"
            role="img"
          >
            <use
              href="#arrow-down"
            />
          </svg>
        </div>
         
        <!---->
         
        <span
          class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-mt-2 gl-line-height-normal gl-ml-6"
        >
          <span
            class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
            style="background-color: rgb(203, 226, 249); color: rgb(16, 104, 191);"
          >
            <svg
              aria-hidden="true"
              class="gl-icon s12"
              data-testid="issues-icon"
              role="img"
            >
              <use
                href="#issues"
              />
            </svg>
          </span>
          

          Issue
        
        </span>
      </div>
    </div>
    <div
      class="gl-mb-3"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(195, 230, 205); color: rgb(33, 118, 69);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s12"
            data-testid="task-done-icon"
            role="img"
          >
            <use
              href="#task-done"
            />
          </svg>
        </span>
        

      Task
    
      </span>
       
      <!---->
       
      <!---->
    </div>
    <div
      class="gl-mb-3"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(219, 42, 15); color: rgb(253, 212, 205);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s16"
            data-testid="issue-type-incident-icon"
            role="img"
          >
            <use
              href="#issue-type-incident"
            />
          </svg>
        </span>
        

      Incident
    
      </span>
       
      <!---->
       
      <!---->
    </div>
  </div>
   
  <div
    class="gl-font-weight-bold gl-mt-5 gl-mb-2"
    data-testid="unavailable-structure"
  >
    
    Unavailable structure
  
  </div>
   
  <p
    class="gl-mb-3!"
  >
    
    These items are unavailable in the current structure.
  
  </p>
   
  <div>
    <div
      class="gl-mb-3 flex"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(245, 217, 168); color: rgb(171, 97, 0);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s12"
            data-testid="epic-icon"
            role="img"
          >
            <use
              href="#epic"
            />
          </svg>
        </span>
        

      Child epic
    
      </span>
       
      <span
        class="badge gl-ml-3 gl-align-self-center badge-info badge-pill gl-badge sm"
      >
        <svg
          aria-hidden="true"
          class="gl-badge-icon gl-icon s16 gl-mr-2"
          data-testid="license-icon"
          role="img"
        >
          <use
            href="#license"
          />
        </svg>
         Ultimate
      </span>
       
      <!---->
    </div>
    <div
      class="gl-mb-3 flex"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(197, 227, 251); color: rgb(0, 104, 197);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s12"
            data-testid="requirements-icon"
            role="img"
          >
            <use
              href="#requirements"
            />
          </svg>
        </span>
        

      Requirement
    
      </span>
       
      <span
        class="badge gl-ml-3 gl-align-self-center badge-info badge-pill gl-badge sm"
      >
        <svg
          aria-hidden="true"
          class="gl-badge-icon gl-icon s16 gl-mr-2"
          data-testid="license-icon"
          role="img"
        >
          <use
            href="#license"
          />
        </svg>
         Ultimate
      </span>
       
      <!---->
    </div>
    <div
      class="gl-mb-3 flex"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(0, 122, 63); color: rgb(186, 232, 203);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s16"
            data-testid="issue-type-test-case-icon"
            role="img"
          >
            <use
              href="#issue-type-test-case"
            />
          </svg>
        </span>
        

      Test case
    
      </span>
       
      <span
        class="badge gl-ml-3 gl-align-self-center badge-info badge-pill gl-badge sm"
      >
        <svg
          aria-hidden="true"
          class="gl-badge-icon gl-icon s16 gl-mr-2"
          data-testid="license-icon"
          role="img"
        >
          <use
            href="#license"
          />
        </svg>
         Ultimate
      </span>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`WorkItemsHierarchy App when licensePlan is ultimate matches the snapshot 1`] = `
<div>
  <div
    class="gl-card gl-px-8 gl-py-6 gl-line-height-20 gl-mt-4 gl-px-5!"
  >
    <!---->
     
    <div
      class="gl-card-body gl-display-flex gl-p-0!"
    >
      <div
        class="gl-banner-illustration"
      >
        <img
          alt=""
          role="presentation"
          src="/foo.svg"
        />
      </div>
       
      <div
        class="gl-banner-content"
      >
        <h1
          class="gl-banner-title"
        >
          Help us improve work items in GitLab!
        </h1>
         
        <p>
          
      Is there a framework or type of work item you wish you had access to in GitLab? Give us your feedback and help us build the experiences valuable to you.
    
        </p>
         
        <a
          class="btn btn-confirm btn-md gl-button"
          data-testid="gl-banner-primary-button"
          href="https://forms.gle/u1BmRp8rTbwj52iq5"
        >
          <!---->
           
          <!---->
            
          <span
            class="gl-button-text"
          >
            Take the work items survey
          </span>
        </a>
         
      </div>
       
      <button
        aria-label="Close banner"
        class="btn gl-banner-close btn-default btn-sm gl-button btn-default-tertiary btn-icon"
        type="button"
      >
        <!---->
         
        <svg
          aria-hidden="true"
          class="gl-button-icon gl-icon s16"
          data-testid="close-icon"
          role="img"
        >
          <use
            href="#close"
          />
        </svg>
          
        <!---->
      </button>
    </div>
     
    <!---->
  </div>
   
  <h3
    class="gl-mt-5!"
  >
    Planning hierarchy
  </h3>
   
  <p>
    
    Deliver value more efficiently by breaking down necessary work into a hierarchical structure. This structure helps teams understand scope, priorities, and how work cascades up toward larger goals.
  
  </p>
   
  <div
    class="gl-font-weight-bold gl-mb-2"
  >
    Current structure
  </div>
   
  <p
    class="gl-mb-3!"
  >
    You can start using these items now.
  </p>
   
  <div>
    <div
      class="gl-mb-3"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(225, 216, 249); color: rgb(105, 76, 192);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s12"
            data-testid="epic-icon"
            role="img"
          >
            <use
              href="#epic"
            />
          </svg>
        </span>
        

      Epic
    
      </span>
       
      <!---->
       
      <div
        class="gl-relative"
      >
        <svg
          class="hierarchy-rounded-arrow-tail gl-text-gray-400"
          data-testid="hierarchy-rounded-arrow-tail"
          fill="none"
          width="2"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="1.5"
            x1="0.75"
            x2="0.75"
            y1="1"
            y2="100%"
          />
        </svg>
         
        <div
          class="gl-display-block gl-mt-2 gl-ml-6"
        >
          <svg
            aria-hidden="true"
            class="gl-text-gray-400 gl-icon s16"
            data-testid="arrow-down-icon"
            role="img"
          >
            <use
              href="#arrow-down"
            />
          </svg>
        </div>
         
        <!---->
         
        <span
          class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-mt-2 gl-line-height-normal gl-ml-6"
        >
          <span
            class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
            style="background-color: rgb(245, 217, 168); color: rgb(171, 97, 0);"
          >
            <svg
              aria-hidden="true"
              class="gl-icon s12"
              data-testid="epic-icon"
              role="img"
            >
              <use
                href="#epic"
              />
            </svg>
          </span>
          

          Child epic
        
        </span>
        <div
          class="gl-display-block gl-mt-2 gl-ml-6"
        >
          <svg
            aria-hidden="true"
            class="gl-text-gray-400 gl-icon s16"
            data-testid="arrow-down-icon"
            role="img"
          >
            <use
              href="#arrow-down"
            />
          </svg>
        </div>
         
        <svg
          aria-hidden="true"
          class="gl-text-gray-400 gl-ml-2 hierarchy-rounded-arrow gl-icon s16"
          data-testid="level-up-icon"
          role="img"
        >
          <use
            href="#level-up"
          />
        </svg>
         
        <span
          class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-mt-2 gl-line-height-normal gl-ml-0"
        >
          <span
            class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
            style="background-color: rgb(203, 226, 249); color: rgb(16, 104, 191);"
          >
            <svg
              aria-hidden="true"
              class="gl-icon s12"
              data-testid="issues-icon"
              role="img"
            >
              <use
                href="#issues"
              />
            </svg>
          </span>
          

          Issue
        
        </span>
      </div>
    </div>
    <div
      class="gl-mb-3"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(195, 230, 205); color: rgb(33, 118, 69);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s12"
            data-testid="task-done-icon"
            role="img"
          >
            <use
              href="#task-done"
            />
          </svg>
        </span>
        

      Task
    
      </span>
       
      <!---->
       
      <!---->
    </div>
    <div
      class="gl-mb-3"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(219, 42, 15); color: rgb(253, 212, 205);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s16"
            data-testid="issue-type-incident-icon"
            role="img"
          >
            <use
              href="#issue-type-incident"
            />
          </svg>
        </span>
        

      Incident
    
      </span>
       
      <!---->
       
      <!---->
    </div>
    <div
      class="gl-mb-3"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(197, 227, 251); color: rgb(0, 104, 197);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s12"
            data-testid="requirements-icon"
            role="img"
          >
            <use
              href="#requirements"
            />
          </svg>
        </span>
        

      Requirement
    
      </span>
       
      <!---->
       
      <!---->
    </div>
    <div
      class="gl-mb-3"
    >
      <span
        class="gl-border-gray-100 gl-border-1 gl-border-solid gl-rounded-base gl-pl-2 gl-pt-2 gl-pb-2 gl-pr-3 gl-display-inline-flex gl-align-items-center gl-justify-content-center gl-line-height-normal"
        data-testid="work-item-wrapper"
      >
        <span
          class="gl-rounded-base gl-mr-2 gl-display-inline-flex justify-content-center align-items-center hierarchy-icon-wrapper"
          style="background-color: rgb(0, 122, 63); color: rgb(186, 232, 203);"
        >
          <svg
            aria-hidden="true"
            class="gl-icon s16"
            data-testid="issue-type-test-case-icon"
            role="img"
          >
            <use
              href="#issue-type-test-case"
            />
          </svg>
        </span>
        

      Test case
    
      </span>
       
      <!---->
       
      <!---->
    </div>
  </div>
   
  <!---->
   
  <!---->
   
  <div />
</div>
`;
